# Lunch-Menu-Publisher

./: .gitignore  FACTS_EXPORT.md  LICENSE  NO_SCHOOL_BEHAVIOR.md  PDF_DESIGN_INTENT.md  PRODUCT_BLUEPRINT.md  README-PACKAGING.md  README.md  SETTINGS_SPEC.md  UX_CORE_RULES.md  VERSE_HANDLING.md  index.html  package-lock.json  package.json
css/: app.css  pdf.css
data/: kjv-bible.json
js/: calendar.js  editing.js  email-export.js  facts-export.js  state.js  tiles.js
src-tauri/: Cargo.toml  tauri.conf.json
ui/: index.html
ui/css/: app.css  pdf.css
ui/js/: app.js  editing.js  settings.js  state.js  tiles.js  verses.js
